Implemented Twitter Bootstrap (v3.0)

--- a/Source/Hanssens CookBook/Hanssens.CookBook/Views/Home/Index.cshtml
+++ b/Source/Hanssens CookBook/Hanssens.CookBook/Views/Home/Index.cshtml
@@ -1,6 +1,9 @@
 ﻿@{
-    ViewBag.Title = "Index";
+    ViewBag.Title = "Hanssens Cookbook";
     Layout = "~/Views/Shared/_Layout.cshtml";
 }
 
-<h2>Index</h2>
+<div class="homepage">
+    <h1>@ViewBag.Title</h1>
+    <p class="lead">Dragons be here...</p>
+</div>
