Added some red coloring for validation errors

--- a/Source/Hanssens CookBook/Hanssens.CookBook/Assets/Styles/style.css
+++ b/Source/Hanssens CookBook/Hanssens.CookBook/Assets/Styles/style.css
@@ -5,3 +5,8 @@
   padding: 40px 15px;
   text-align: center;
 }
+
+/** Validation and Input Errors */
+.input-validation-error, .field-validation-error {
+    color: red;
+}
